--- a/Engine.vcxproj.filters
+++ b/Engine.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="src\Float2.hpp">
       <Filter>Header Files\Math</Filter>
     </ClInclude>
+    <ClInclude Include="src\MathUtils.hpp">
+      <Filter>Header Files\Math</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Camera.cpp">
