--- a/Engine.vcxproj
+++ b/Engine.vcxproj
@@ -159,6 +159,14 @@
     <ClInclude Include="src\Graphics.hpp" />
     <ClInclude Include="src\IcosphereCreator.hpp" />
     <ClInclude Include="src\Image.hpp" />
+    <ClInclude Include="src\imgui\imconfig.h" />
+    <ClInclude Include="src\imgui\imgui.h" />
+    <ClInclude Include="src\imgui\imgui_impl_dx11.h" />
+    <ClInclude Include="src\imgui\imgui_impl_win32.h" />
+    <ClInclude Include="src\imgui\imgui_internal.h" />
+    <ClInclude Include="src\imgui\imstb_rectpack.h" />
+    <ClInclude Include="src\imgui\imstb_textedit.h" />
+    <ClInclude Include="src\imgui\imstb_truetype.h" />
     <ClInclude Include="src\Input.hpp" />
     <ClInclude Include="src\Light.hpp" />
     <ClInclude Include="src\LightShader.hpp" />
@@ -183,6 +191,12 @@
     <ClCompile Include="src\Graphics.cpp" />
     <ClCompile Include="src\IcosphereCreator.cpp" />
     <ClCompile Include="src\Image.cpp" />
+    <ClCompile Include="src\imgui\imgui.cpp" />
+    <ClCompile Include="src\imgui\imgui_demo.cpp" />
+    <ClCompile Include="src\imgui\imgui_draw.cpp" />
+    <ClCompile Include="src\imgui\imgui_impl_dx11.cpp" />
+    <ClCompile Include="src\imgui\imgui_impl_win32.cpp" />
+    <ClCompile Include="src\imgui\imgui_widgets.cpp" />
     <ClCompile Include="src\Input.cpp" />
     <ClCompile Include="src\Light.cpp" />
     <ClCompile Include="src\LightShader.cpp" />
