--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -14,7 +14,7 @@
       "name": "x86-Release",
       "generator": "Visual Studio 15 2017",
       "configurationType": "Release",
-      "buildRoot": "${env.USERPROFILE}\\CMakeBuild\\${workspaceHash}\\build\\${name}",
+      "buildRoot": "${projectDir}\\Bin\\Win32\\${configurationType}",
       "cmakeCommandArgs": "-DCMAKE_BUILD_TYPE=Release",
       "buildCommandArgs": "-m -v:minimal",
       "ctestCommandArgs": "-C Release"
@@ -23,7 +23,7 @@
       "name": "x64-Debug",
       "generator": "Visual Studio 15 2017 Win64",
       "configurationType": "Debug",
-      "buildRoot": "${env.USERPROFILE}\\CMakeBuild\\${workspaceHash}\\build\\${name}",
+      "buildRoot": "${projectDir}\\Bin\\x64\\${configurationType}",
       "cmakeCommandArgs": "-DCMAKE_BUILD_TYPE=Debug",
       "buildCommandArgs": "-m -v:minimal",
       "ctestCommandArgs": "-C Debug"
@@ -32,7 +32,7 @@
       "name": "x64-Release",
       "generator": "Visual Studio 15 2017 Win64",
       "configurationType": "Release",
-      "buildRoot": "${env.USERPROFILE}\\CMakeBuild\\${workspaceHash}\\build\\${name}",
+      "buildRoot": "${projectDir}\\Bin\\x64\\${configurationType}",
       "cmakeCommandArgs": "-DCMAKE_BUILD_TYPE=Release",
       "buildCommandArgs": "-m -v:minimal",
       "ctestCommandArgs": "-C Release"
