Remove unused shaders
Removes shaders and Shader classes along with whole iheritance to clean
up the code.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,8 +9,8 @@ FILE(GLOB IMGUI_SOURCES  ${EXTERNAL_DIR}/ImGUI/*.cpp)
 FILE(GLOB IMGUI_HEADERS  ${EXTERNAL_DIR}/ImGUI/*.h)
 FILE(GLOB UTILS_SOURCES  Utils/*.cpp)
 FILE(GLOB UTILS_HEADERS  Utils/*.hpp)
-FILE(GLOB PIXEL_SHADERS  Shaders/*PS.hlsl)
-FILE(GLOB VERTEX_SHADERS Shaders/*VS.hlsl)
+FILE(GLOB PIXEL_SHADERS  Shaders/Pixel*.hlsl)
+FILE(GLOB VERTEX_SHADERS Shaders/Vertex*.hlsl)
 
 SOURCE_GROUP("Header Files" FILES ${ENG_HEADERS})
 SOURCE_GROUP("Header Files\\ImGUI" FILES ${IMGUI_HEADERS})
